Improved clientscanner BSI and NIST profile